- Deploy our app . . .

# Branches
- Main
-       Worked on User Story #4 until 15/17 tests were passing
-       Had some odd things going on between local and remote repos. There were a lot of untracked changes after merging US-#5 to Main in GitHub. The problem seemed to be that the changes needed to be merged locally after a git pull request.
-       Completed functions for User Story #6.
-       Completed front-end functions for User Stories #2 and 3.
- db-connection:
-       created db's for dev, test, preview & prod & connected them
-       defined rows in "reservations" table
-       created "tables" table via Knex migrate
-       created seeds file for "tables"
-       seeded "reservations" table
-       confirmed that server runs and DBeaver is connected to db
- US-01: (for User Story #1)
-       created routes for /reservations/new and /reservations pages
-       confirmed that app.js file includes the reservations router
-       added "methodNotAllowed" to errors folder
-       added "asyncErrorBoundary" to errors folder
-       added "hasProperties" to errors folder
-       updated reservations.controller.js and created reservations.service.js
-       seeded "tables" table
- US-#2: (for User Story #2)
-       wrote middleware for validating date in "reservations"
-       continued testing User Story #1; 6 tests still not passing
-       imported 2 functions from front-end/utils/date-time.js 
        to complete GET functions for /reservations route
-       troubleshooting until all tests for US-#1 pass
-       completed 2 functions to validate that the date is in the
        future and is not a Tuesday when the restaurant is closed
- US-#3: (for User Story #3)
-       Writing middleware to confirm time is between 
        10:30-21:30 in "reservations"
-       Created "GET" route for "tables" (actually part of US-#4)
-       Updated "tables" to remove "seat" column and change
        properties of "reservation_id" to default to NULL value